--- a/The Childhood House/Packages/manifest.json
+++ b/The Childhood House/Packages/manifest.json
@@ -1,8 +1,13 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.localization": "1.4.5",
+    "com.unity.physics": "1.0.16",
+    "com.unity.probuilder": "5.2.2",
+    "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.7.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
